hphp/hack/test/typecheck/varray_invalid.php.exp
File "varray_invalid.php", line 3, characters 24-24:
A closing angle bracket ('>') is expected here. (Parsing[1002])
