hphp/hack/test/typecheck/varray_invalid.php
<?hh

function foo(varray<int) $x): void {}
